New code after using api

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -12,7 +12,7 @@
     // --side-nav-color:#181f38;
     --side-nav-color:#7C93C3;
     --side-nav-hover:#99B080;
-    --table-color:#eeeeee;
+    --table-color:#1f1919;
 }
 *,
 *::before,
