--- a/templates/students.html
+++ b/templates/students.html
@@ -1,6 +1,6 @@
 {% extends "index.html" %}
 {% block css %}
-    <title>Studenst</title>
+    <title>Students</title>
 {% endblock css %}
 {% block content %}
 <div class="student_head">
