--- a/app/templates/_layout.html
+++ b/app/templates/_layout.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Default Title{% endblock %}</title>
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'lib-css/bootstrap.css' %}" rel="stylesheet">
+    <script src="{% static 'lib-js/jquery.min.js' %}"></script>
 </head>
 <body>
     <div id="header">
