--- a/app/templates/page2.html
+++ b/app/templates/page2.html
@@ -3,6 +3,11 @@
 {% block title %} Page 2 {% endblock %}
 
 {% block content %}
+<link href="{% static 'app-css/page2.css' %}" rel="stylesheet">
+<script src="{% static 'app-js/page2.js' %}"></script>
+
     <p>This is the page #2 content.</p>
     <img src="{% static 'img/dance2.gif' %}" alt="Example Image">
+    <br>
+    <a href="/app/page1">Navigate to Previous Page</a>
 {% endblock %}
