--- a/app/templates/page1.html
+++ b/app/templates/page1.html
@@ -3,17 +3,18 @@
 {% block title %} Page 1 {% endblock %}
 
 {% block content %}
-<link href="{% static 'app-css/page1.css' %}" rel="stylesheet">
+<link href="{% static 'app-css/page1.css' %}" rel="stylesheet"/>
 <script src="{% static 'app-js/page1.js' %}"></script>
 
     <p>This is the page #1 content.</p>
     <img src="{% static 'img/dance1.gif' %}" alt="Example Image">
-    <br>
-    <a href="/app/page2">Navigate to Next Page</a>
-    <br>
 
+    <p><a href="/app/page2">Navigate to Next Page</a></p>
+    
+    <h4 class="classlibrary">{{ result }}</h4>
     <input type="button" id="btnCreateStudent" value="Create Student">
     <input type="button" id="btnGetStudent" value="Get Students">
     <input type="button" id="btnUpdateStudent" value="Update Student">
     <input type="button" id="btnDeleteStudent" value="Delete Student">
+    <input type="button" id="btnCommon" value="Common">
 {% endblock %}
