Added some more stuffs

--- a/app/templates/_layout.html
+++ b/app/templates/_layout.html
@@ -13,6 +13,7 @@
 <body>
     <div id="header">
         <h1>I am Top Bar</h1>
+        <input type="hidden" id="api_endpoint" value="{{api_endpoint}}">
     </div>
 
     <div id="content">
