--- a/app/templates/students.html
+++ b/app/templates/students.html
@@ -3,10 +3,310 @@
 {% block title %} Student Management {% endblock %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static 'app-css/students_html.css' %}">
+<script src="{% static 'app-js/students.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+
 <div class="row">
-    <div class="col-xl-12">
-        <h1>Hello Students</h1>
-    </div><!--end col-->
-</div><!--end row-->
+    <div class="col-sm-12 col-md-5 col-xl-8">
+        <h2>Student Management</h2>
+        <p>Manage your Student here.</p>
+    </div>
+    <div class="col-sm-12 col-md-7 col-xl-4">
+        <div class="row">
+            <div class="col text-end">
+                <a href="" class="btn btn-primary btn-block studentAddForm" onclick="openForm(event,'studentForm')">Create Student</a>
+                <a href="" class="btn btn-secondary btn-block">Export </a>
+                <a href="" class="btn btn-success btn-block">Import</a>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Student table start -->
+    <section class="row" data-jwt-tokens="{{ jwtToken }}" id="jwt_card">
+        <div class="col-md-12">
+            <table class="table table-striped table-hover table-sticky table_students">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>S.No</th>
+                        <th>Student Name</th>
+                        <th>Roll Number</th>
+                        <th>Class </th>
+                        <th>Section</th>
+                        <th>Gender</th>
+                        <th>Blood Group</th>
+                        <th>Student Action</th>
+                    </tr>
+                </thead>
+                <tbody class="tbl__bdy">
+                    {% for student in student_data %}
+                    <tr class="tr-student-{{student.student_id}}">
+                        <td>{{forloop.counter}}</td>
+                        <td class="student_name">{{ student.student_name }}</td>
+                        <td class="roll_number">{{ student.roll_number }}</td>
+                        <td class="class_id">{{ student.class_id }}</td>
+                        <td class="section_id">{{ student.section_id }}</td>
+                        <td class="gender">{{ student.gender }}</td>
+                        <td class="blood_group">{{ student.blood_group }}</td>
+                        <td>
+                            <a href="" onclick="EditButton(this, event)" data-id="{{student.student_id}}" class="btn btn-sm btn-primary">Edit</a>
+                            <a href="" onclick="DeleteButton(this, event)" data-id="{{student.student_id}}" class="btn btn-sm btn-danger">Delete</a>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+       
+    </section>
+<!-- student table end -->
+<!-- student Form Start -->
+<section class="form_section bg-grey" id="studentForm">
+    <article class="container-fluid">
+        <div class="row">
+            <div class="col-xl-8"></div>
+            <div class="col-xl-4 form_div">
+                <div class="row">
+                    <div class="col-xl-6">
+                        <h3>Student Form</h3>
+                    </div>
+                    <div class="col-xl-6 text-end">
+                        <a href="" class="studentCloseForm">*</a>
+                    </div>
+                </div>
+                <form class="container studentForm" id="student-form" method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <input type="hidden" name="id" id="id">
+                    <div class="row form__area">
+                        <div class="col-md-12">
+                            <label for="student_name" class="form-label">Name</label>
+                            <input type="text" class="form-control" id="student_name" name="student_name" required>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="date_of_birth" class="form-label">Date of Birth</label>
+                            <input type="date" class="form-control" id="date_of_birth" name="date_of_birth" required>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="admission_date" class="form-label">Registration Date</label>
+                            <input type="date" class="form-control" id="admission_date" name="admission_date" required>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="blood_group" class="form-label">Blood Group</label>
+                            <select id="blood_group" class="form-select" name="blood_group">
+                                <option selected>Choose...</option>
+                                <option value="A+">A+</option>
+                                <option value="A-">A-</option>
+                                <option value="B+">B+</option>
+                                <option value="B-">B-</option>
+                                <option value="AB+">AB+</option>
+                                <option value="O+">O+</option>
+                                <option value="O-">O-</option>
+                            </select>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="gender" class="form-label">Gender</label>
+                            <select id="gender" class="form-select" name="gender">
+                                <option selected disabled>Choose...</option>
+                                <option value="Male">Male</option>
+                                <option value="FeMale">FeMale</option>
+                                <option value="Other">Other</option>
+                            </select>
+                        </div>
+                        <div class="col-md-12">
+                            <label for="photo" class="form-label">Photo</label>
+                            <input type="file" accept=".pdf,.jpg,.jpeg" placeholder="Seletct File" class="form-control" id="photo" name="photo" required>
+                        </div>
+                        <div class="accordion" id="accordionPanelsStayOpenExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                                        aria-controls="panelsStayOpen-collapseOne">
+                                        Contact Details
+                                    </button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse"
+                                    aria-labelledby="panelsStayOpen-headingOne">
+                                    <div class="accordion-body">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label for="email" class="form-label">Email</label>
+                                                <input type="text" class="form-control" id="email" name="email" required>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <label for="phone_number" class="form-label">Phone</label>
+                                                <input type="text" class="form-control" id="phone_number" name="phone_number" minlength="10" maxlength="10" required>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="accordion" id="accordionPanelsStayOpenExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="true"
+                                        aria-controls="panelsStayOpen-collapseTwo">
+                                        Parent Details
+                                    </button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+                                    aria-labelledby="panelsStayOpen-headingOne">
+                                    <div class="accordion-body">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label for="parent_name" class="form-label">Parent Name</label>
+                                                <input type="text" class="form-control" id="parent_name" name="parent_name" required>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <label for="relation_with_student" class="form-label">relation with student</label>
+                                                <select id="relation_with_student" class="form-select" name="relation_with_student" required>
+                                                    <option selected disabled>Choose...</option>
+                                                    <option value="Father">Father</option>
+                                                    <option value="Mother">Mother</option>
+                                                    <option value="Guardian">Guardian</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label for="parent_phone" class="form-label">Parent phone</label>
+                                                <input type="text" class="form-control" id="parent_phone" name="parent_phone" required>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <label for="parent_email" class="form-label">Parent Email</label>
+                                                <input type="text" class="form-control" id="parent_email" name="parent_email" required>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion" id="accordionPanelsStayOpenExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="true"
+                                        aria-controls="panelsStayOpen-collapseThree">
+                                        Address Details
+                                    </button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+                                    aria-labelledby="panelsStayOpen-headingTwo">
+                                    <div class="accordion-body">
+                                        <div class="row">
+                                            <div class="col-md-12">
+                                                <label for="Address" class="form-label">Address Line</label>
+                                                <textarea class="form-control" id="address"
+                                                    rows="3" name="address" required></textarea>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <label for="city" class="form-label">City</label>
+                                                <input type="text" class="form-control" id="city" name="city" required>
+                                            </div>
+                                            <!-- state -->
+                                            <div class="col-md-6">
+                                                <label for="state" class="form-label">State</label>
+                                                <input type="text" class="form-control" id="state" name="state" required>
+                                            </div>
+                                            <!-- country -->
+                                            <div class="col-md-6">
+                                                <label for="country" class="form-label">Country</label>
+                                                <input type="text" class="form-control" id="country" name="country" required>
+                                            </div>
+                                            <!-- pincode -->
+                                            <div class="col-md-6">
+                                                <label for="pincode" class="form-label">Pincode</label>
+                                                <input type="text" class="form-control" id="pincode" name="pincode" required>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion" id="accordionPanelsStayOpenExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="true"
+                                        aria-controls="panelsStayOpen-collapseFour">
+                                        Class & Section
+                                    </button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse"
+                                    aria-labelledby="panelsStayOpen-headingThree">
+                                    <div class="accordion-body">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label for="class_id" class="form-label">Class</label>
+                                                <select id="class_id" class="form-select" name="class_id" required>
+                                                    
+                                                </select>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <label for="section_id" class="form-label">Section</label>
+                                                <select id="section_id" class="form-select" name="section_id" required>
+                                                    <option>Select class first</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>                                
+                            </div>
+                        </div>
+
+                         <div class="accordion" id="accordionPanelsStayOpenExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="true"
+                                        aria-controls="panelsStayOpen-collapseFive">
+                                        Transportation
+                                    </button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse"
+                                    aria-labelledby="panelsStayOpen-headingOne">
+                                    <div class="accordion-body">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label for="payroll_type" class="form-label">Route</label>
+                                                <select  class="form-select" id="transport_id" name="transport_id" required>
+                                                    <option selected disabled>Choose...</option>
+                                                    
+                                                </select>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <label for="salary" class="form-label">Vehicle</label>
+                                                <input type="text" class="form-control" id="vehicle_number" name="vehicle_number" readonly>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        
+                    </div>
+
+                    
+                    <div class="col-12 form__btn">
+                        <button type="submit" class="btn btn-danger  w-50 mx-1" onclick="closeForm(event,'studentForm')">Cancel</button>
+                        <button type="submit" class="btn btn-primary w-50 mx-1">Save</button>
+                        
+                    </div>
+                </form>
+            </div>
+        </div>
+    </article>
+   
+</section>
+
+
+<!-- create bootstrap accordian form  -->
+
+
 
 {% endblock %}
