--- a/app/templates/transport.html
+++ b/app/templates/transport.html
@@ -94,7 +94,7 @@
                 <button class="btn btn-sm btn-dark rounded-pill" onclick="openstopDetails('stopForm','{{ transport.transport_name }}','{{transport.transport_id}}')" data-id="{{transport.transport_id}}">View</button>
             </td>
             <td>
-                <button class="btn btn-sm btn-dark rounded-pill openBtn" onclick="showStudentDetails()">View</button>
+                <button class="btn btn-sm btn-dark rounded-pill openBtn" onclick="showStudentDetails()" data-id="{{transport.transport_id}}"><span id="studentCount">0</span></button>
 
             </td>
             <td>
@@ -149,7 +149,7 @@
 </section>
 
 <section data-jwt-tokens="{{ jwt_token }}" id="jwt_card"></section>
-
+<!-- Student form -->
 <section class="form_section bg-grey" id="studentdetailsForm">
     <article class="container-fluid">
         <div class="row">
@@ -157,7 +157,7 @@
             <div class="col-xl-4 form_div">
                 <div class="row">
                     <div class="col-xl-6">
-                        <h4>student details</h4>
+                        <h4>Student Details</h4>
                     </div>
                     <div class="col-xl-6 text-end">
                         <a class="btn-close" onclick="closeStudentDetails()" aria-label="Close"></a>
@@ -165,15 +165,14 @@
                 </div>
                 <form class="form" id="student-form">
                     <div class="input-field">
-                        <input type="text" class="form-input" placeholder="Enter student number"  id="roll_number">
+                        <input type="text" class="form-input" placeholder="Enter Roll Number"  id="roll_number">
                         <button type="button" class="btnAssign" id="btnAssign" onclick="fetchStudentDetails()">Assign</button>
                     </div>
                 </form>
-                <table class="tbl">
+                <table class="table">
                     <thead>
                         <tr>
-                            <th>Roll Number</th>
-                            <th>Student Name</th>
+                            <th>Roll Number</th> <span> </span> <th>Student Name</th>
                         </tr>
                     </thead>
                     <tbody id="assignedStudents" class="tbl__bdy">
@@ -183,9 +182,5 @@
         </div>
     </article>
 </section>
-
-
-
-
 <script src="{% static 'app-js/transport.js' %}"></script>
 {% endblock %}
