--- a/app/templates/classes.html
+++ b/app/templates/classes.html
@@ -56,22 +56,25 @@
 <section class="row" data-jwt-tokens="{{ jwt_tokens }}" id="jwt_card">
     <div class="class_group" id="TabClass">
         {% for data in class_data %}
-        <div class="card bg-gradient-danger card-img-holder text-white" id="class-id-{{data.class_id}}">
+        <div class="card bg-gradient-danger card-img-holder text-white" id="class-id-{{ data.class_id }}">
             <div class="card-body">
                 <div class="lframe-child1">
                 </div>
                 <div class="lframe-item1">
                 </div>
-                <p class="card-text"><a href="{% url 'classinfo' data.slug %}">{{data.class_name}}</a></p>
+                {% if data.slug %}
+                    <p class="card-text"><a href="{% url 'classinfo' slug=data.slug %}">{{ data.class_name }}</a></p>
+                {% else %}
+                    <p class="card-text">{{ data.class_name }}</p>
+                {% endif %}
                 <img src="{% static 'img/open-book.png' %}" class="card-img-top" alt="...">
                 <div class="action-btn d-flex gap-3">
-                    <a onclick="EditClass(this)" data-class-id="{{data.class_id}}"><i class="bi bi-pencil-square text-primary"></i></a>
-                   <a onclick="DeleteClass(this)" data-class-id="{{data.class_id}}"><i class="bi bi-trash-fill text-danger"></i></a>                
-                </div> 
-            </div>   
-       </div>
-       {% endfor %}
-
+                    <a onclick="EditClass(this)" data-class-id="{{ data.class_id }}"><i class="bi bi-pencil-square text-primary"></i></a>
+                    <a onclick="DeleteClass(this)" data-class-id="{{ data.class_id }}"><i class="bi bi-trash-fill text-danger"></i></a>
+                </div>
+            </div>
+        </div>
+    {% endfor %}  
     </div>
     
 </section>
