--- a/app/templates/transport.html
+++ b/app/templates/transport.html
@@ -10,13 +10,16 @@
 
 
 <div class="row" id="heading-row">
-    <div class="col-sm-12 col-md-5 col-xl-8" style="padding: 1rem;">
-        <h2>Transport Management</h2>
+    <div class="col-sm-12 col-md-8 col-xl-8" style="padding: 1rem;">
+        <h5>Transportation</h5>
+        <quote>In the school bus of knowledge, every journey is a chapter waiting to unfold.</quote>
     </div>
-    <div class="col-sm-12 col-md-7 col-xl-4" style="padding: 1rem;">
+    <div class="col-sm-12 col-md-4 col-xl-4" style="padding: 1rem;">
         <div class="row">
             <div class="col text-end">
-                <a class="btn btn-success rounded-pill" onclick="showtransportForm()"><i class="bi bi-plus-circle me-2"></i>Register Vehicle</a>
+                <button type="button" onclick="showtransportForm()" 
+                class="btn btn-success btn-label rounded-pill right">
+                <i class="bi bi-plus-circle label-icon align-middle fs-lg ms-2"></i>Register Vehicle</button>
             </div>
         </div>
     </div>
