--- a/app/templates/_layout.html
+++ b/app/templates/_layout.html
@@ -77,23 +77,44 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link menu-link collapsed" href="/app/students" aria-controls="sidebarLayouts">
-                                <i class="ti ti-school"></i> <span data-key="t-layouts">Students</span>
+                            <a class="nav-link menu-link collapsed" href="#studentLayout" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="studentLayout">
+                                <i class="bi bi-person-badge"></i> <span data-key="t-layouts">Students</span>
                             </a>
+                            <div class="collapse menu-dropdown" id="studentLayout" style="background: var(--tb-vertical-menu-bg)">
+                                <ul class="nav nav-sm flex-column">
+                                    <li class="nav-item">
+                                        <a href="/app/register_student" class="nav-link" data-key="t-horizontal">New Student</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="/app/students" class="nav-link" data-key="t-detached">Student Records</a>
+                                    </li>
+                                </ul>
+                            </div>
                         </li>
 
                         <li class="nav-item">
-                            <a href="/app/staffs" class="nav-link menu-link"> <i class="bi bi-people"></i>
-                                <span data-key="t-calendar">Staffs</span> </a>
+                            <a class="nav-link menu-link collapsed" href="#staffLayout" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="staffLayout">
+                                <i class="bi bi-person-bounding-box"></i> <span data-key="t-layouts">Staffs</span>
+                            </a>
+                            <div class="collapse menu-dropdown" id="staffLayout" style="background: var(--tb-vertical-menu-bg)">
+                                <ul class="nav nav-sm flex-column">
+                                    <li class="nav-item">
+                                        <a href="/app/register_staff" class="nav-link" data-key="t-horizontal">New Staff</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="/app/staffs" class="nav-link" data-key="t-detached">Staff Records</a>
+                                    </li>
+                                </ul>
+                            </div>
                         </li>
 
                         <li class="nav-item">
-                            <a href="/app/classes" class="nav-link menu-link"> <i class="bi bi-book"></i> <span
+                            <a href="/app/classes" class="nav-link menu-link"> <i class="bi bi-bookmark-check"></i> <span
                                     data-key="t-chat">Classes</span> </a>
                         </li>
 
                         <li class="nav-item">
-                            <a href="/app/calendar" class="nav-link menu-link"> <i class="bi bi-calendar-event"></i> <span
+                            <a href="/app/calendar" class="nav-link menu-link"> <i class="bi bi-calendar-week"></i> <span
                                     data-key="t-email">Calendar</span> </a>
                         </li>
 
@@ -103,7 +124,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="/app/notice" class="nav-link menu-link"> <i class="bi bi-exclamation-circle"></i> <span
+                            <a href="/app/notice" class="nav-link menu-link"> <i class="bi bi-broadcast-pin"></i> <span
                                     data-key="t-to-do">Notice</span> </a>
                         </li>
 
@@ -113,7 +134,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="/app/user" class="nav-link menu-link"> <i class="bi bi-person"></i>
+                            <a href="/app/user" class="nav-link menu-link"> <i class="ri-shield-user-line"></i>
                                 <span data-key="t-kanaban-board">Users</span> </a>
                         </li>
                     </ul>
@@ -162,8 +183,7 @@
                         </button>
 
                         <div>
-
-                            <h5>School of Excellence</h5>
+                           <h4 class="organization_name">Oakridge International</h4>
                         </div>
                     </div>
 
@@ -495,7 +515,7 @@
 
             <!-- End Page-content -->
 
-            <footer class="footer">
+            <!-- <footer class="footer">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-sm-6">
@@ -508,7 +528,7 @@
                         </div>
                     </div>
                 </div>
-            </footer>
+            </footer> -->
         </div>
         <!-- end main content-->
 
@@ -532,7 +552,7 @@
     <div class="customizer-setting d-none d-md-block">
         <div class="btn btn-info p-2 text-uppercase rounded-end-0 shadow-lg" data-bs-toggle="offcanvas"
             data-bs-target="#theme-settings-offcanvas" aria-controls="theme-settings-offcanvas">
-            <i class="bi bi-gear mb-1"></i> Customizer
+            <i class="bi bi-gear mb-1"></i>
         </div>
     </div>
 
