--- a/app/templates/staffs.html
+++ b/app/templates/staffs.html
@@ -8,64 +8,82 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <div class="row" id="heading-row">
-    
-    <div class="col-sm-12 col-md-5 col-xl-8" style="padding: 1rem">
-        <h2>Staff Management</h2>
-        <p>Manage your Staffs here.</p>
+
+    <div class="col-sm-12 col-md-8 col-xl-8" style="padding: 1rem">
+        <h5>Staffs</h5>
+        <quote>Teachers illuminate the path to knowledge, guiding minds to brilliance with each lesson they share.
+        </quote>
     </div>
-    <div class="col-sm-12 col-md-7 col-xl-4" style="padding: 1rem">
+    <div class="col-sm-12 col-md-4 col-xl-4" style="padding: 1rem">
         <div class="row">
             <div class="col text-end">
-                <a href=""class="btn btn-success rounded-pill btn-block studentAddForm" onclick="openForm(event,'studentForm')">
-                    <i class="bi bi-plus-circle me-2"></i>Create Staff</a>
-                <a href=""class="btn btn-secondary rounded-pill btn-block"><i class="bi bi-download me-2"></i>Export </a>
-                
+                <button type="button" onclick="openForm(event,'studentForm')"
+                    class="btn btn-success btn-label rounded-pill right">
+                    <i class="bi bi-plus-circle label-icon align-middle fs-lg ms-2"></i>Enroll Staff</button>
+
+                <button class="btn btn-outline-primary rounded-pill btn-icon tripledots-dropdown-toggle"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="bi bi-three-dots-vertical"></i>
+                </button>
+                <div class="input-group">
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#"><i class="bi bi-upload me-2"></i> Import Bulk</a></li>
+                        <li><a class="dropdown-item" href="#"><i class="bi bi-download me-2"></i> Export CSV</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="#"><i class="bi bi-download me-2"> </i>Separated link</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
 </div>
 <!-- Staff table start -->
-    <section class="row" data-jwt-tokens="{{ jwtToken }}" id="jwt_card">
-        <div class="col-md-12">
-            <table class="table table-striped table-hover table-sticky table_students">
-                <thead class="thead-dark">
-                    <tr>
-                        <th>S.No</th>
-                        <th>Staff Name</th>
-                        <th>Emp ID</th>
-                        <th>Role </th>
-                        <th>Phone Number</th>
-                        <th>Joining Date</th>
-                        <th>Gender</th>
-                        <th>Blood Group</th>
-                        <th>Staff Action</th>
-                    </tr>
-                </thead>
-                <tbody  class="tbl__bdy">
-                    {% for staff in staff_data %}
-                    <tr class="tr-staff-{{staff.staff_id}}">
-                        <td>{{forloop.counter}}</td>
-                        <td class="staff_name">{{ staff.staff_name }}</td>
-                        <td class="employee_id">{{ staff.employee_id }}</td>
-                        <td class="role">{{ staff.role }}</td>
-                        <td class="phone_number">{{ staff.phone_number}}</td>
-                        <td class="joining_date">{{ staff.joining_date }}</td>
-                        <td class="gender">{{ staff.gender }}</td>
-                        <td class="blood_group">{{ staff.blood_group }}</td>
-                        <td>
-                            <a href="#" onclick="EditButton(this, event)" data-id="{{staff.staff_id}}" class="btn btn-sm btn-info">
-                                <i class="bi bi-pencil-square"></i>
-                            </a>
-                            <a href="#" onclick="DeleteButton(this, event)" data-id="{{staff.staff_id}}" class="btn btn-sm btn-danger">
-                                <i class="bi bi-trash3"></i>
-                            </a>
-                        </td>
-                    </tr>
-                    {% endfor %}
+<section class="row" data-jwt-tokens="{{ jwtToken }}" id="jwt_card">
+    <div class="col-md-12">
+        <table class="table table-striped table-hover table-sticky table_students">
+            <thead class="thead-dark">
+                <tr>
+                    <th>S.No</th>
+                    <th>Staff Name</th>
+                    <th>Emp ID</th>
+                    <th>Role </th>
+                    <th>Phone Number</th>
+                    <th>Joining Date</th>
+                    <th>Gender</th>
+                    <th>Blood Group</th>
+                    <th>Staff Action</th>
+                </tr>
+            </thead>
+            <tbody class="tbl__bdy">
+                {% for staff in staff_data %}
+                <tr class="tr-staff-{{staff.staff_id}}">
+                    <td>{{forloop.counter}}</td>
+                    <td class="staff_name">{{ staff.staff_name }}</td>
+                    <td class="employee_id">{{ staff.employee_id }}</td>
+                    <td class="role">{{ staff.role }}</td>
+                    <td class="phone_number">{{ staff.phone_number}}</td>
+                    <td class="joining_date">{{ staff.joining_date }}</td>
+                    <td class="gender">{{ staff.gender }}</td>
+                    <td class="blood_group">{{ staff.blood_group }}</td>
+                    <td>
+                        <a href="#" onclick="EditButton(this, event)" data-id="{{staff.staff_id}}"
+                            class="btn btn-sm btn-info">
+                            <i class="bi bi-pencil-square"></i>
+                        </a>
+                        <a href="#" onclick="DeleteButton(this, event)" data-id="{{staff.staff_id}}"
+                            class="btn btn-sm btn-danger">
+                            <i class="bi bi-trash3"></i>
+                        </a>
+                    </td>
+                </tr>
+                {% endfor %}
                 </>
-            </table>
-        </div>
-    </section>
+        </table>
+    </div>
+</section>
 <!-- student table end -->
 <!-- student Form Start -->
 <section class="form_section bg-grey" id="studentForm">
@@ -87,11 +105,13 @@
                     <div class="row form__area">
                         <div class="col-md-6">
                             <label for="staff_name" class="form-label">Name</label>
-                            <input type="text" placeholder="Enter your Name" class="form-control" id="staff_name" name="staff_name" required> 
+                            <input type="text" placeholder="Enter your Name" class="form-control" id="staff_name"
+                                name="staff_name" required>
                         </div>
                         <div class="col-md-6">
                             <label for="role" class="form-label">Designation</label>
-                            <input type="text" placeholder="Enter Staff Role" class="form-control" id="role" name="role" required>
+                            <input type="text" placeholder="Enter Staff Role" class="form-control" id="role" name="role"
+                                required>
                         </div>
                         <div class="col-md-6">
                             <label for="date_of_birth" class="form-label">Date of Birth</label>
@@ -103,7 +123,7 @@
                         </div>
                         <div class="col-md-6">
                             <label for="blood_group" class="form-label">Blood Group</label>
-                            <select  class="form-select" id="blood_group" name="blood_group" required>
+                            <select class="form-select" id="blood_group" name="blood_group" required>
                                 <option selected>Choose...</option>
                                 <option value="A+">A+</option>
                                 <option value="A-">A-</option>
@@ -116,7 +136,7 @@
                         </div>
                         <div class="col-md-6">
                             <label for="gender" class="form-label">Gender</label>
-                            <select  class="form-select" id="gender"  name="gender" required>
+                            <select class="form-select" id="gender" name="gender" required>
                                 <option selected disabled>Choose...</option>
                                 <option value="Male">Male</option>
                                 <option value="FeMale">FeMale</option>
@@ -125,7 +145,8 @@
                         </div>
                         <div class="col-md-12">
                             <label for="photo" class="form-label">Photo</label>
-                            <input type="file" accept=".pdf,.jpg,.jpeg" placeholder="Seletct File" class="form-control" id="photo" name="photo" required>
+                            <input type="file" accept=".pdf,.jpg,.jpeg" placeholder="Seletct File" class="form-control"
+                                id="photo" name="photo" required>
                         </div>
                         <div class="accordion" id="accordionPanelsStayOpenExample">
                             <div class="accordion-item">
@@ -142,11 +163,13 @@
                                         <div class="row">
                                             <div class="col-md-6">
                                                 <label for="email" class="form-label">Email</label>
-                                                <input type="text" placeholder="Enter Email Address" class="form-control" id="email" name="email" required>
+                                                <input type="text" placeholder="Enter Email Address"
+                                                    class="form-control" id="email" name="email" required>
                                             </div>
                                             <div class="col-md-6">
                                                 <label for="phone_number" class="form-label">Phone</label>
-                                                <input type="text" placeholder="Enter Mobile No" class="form-control" id="phone_number" name="phone_number" required>
+                                                <input type="text" placeholder="Enter Mobile No" class="form-control"
+                                                    id="phone_number" name="phone_number" required>
                                             </div>
                                         </div>
                                     </div>
@@ -168,11 +191,14 @@
                                         <div class="row">
                                             <div class="col-md-6">
                                                 <label for="specialization" class="form-label">Specialization</label>
-                                                <input type="text" placeholder="Where you Specialize" class="form-control" id="specialization" name="specialization" required>
+                                                <input type="text" placeholder="Where you Specialize"
+                                                    class="form-control" id="specialization" name="specialization"
+                                                    required>
                                             </div>
                                             <div class="col-md-6">
                                                 <label for="experience" class="form-label">Experience</label>
-                                                <input type="text" placeholder="years of experience" class="form-control" id="experience" name="experience" required>
+                                                <input type="text" placeholder="years of experience"
+                                                    class="form-control" id="experience" name="experience" required>
                                             </div>
                                         </div>
                                     </div>
@@ -194,7 +220,8 @@
                                         <div class="row">
                                             <div class="col-md-6">
                                                 <label for="payroll_type" class="form-label">Employee Type</label>
-                                                <select  class="form-select" id="payroll_type" name="payroll_type" required>
+                                                <select class="form-select" id="payroll_type" name="payroll_type"
+                                                    required>
                                                     <option selected disabled>Choose...</option>
                                                     <option value="FullTime">FullTime</option>
                                                     <option value="PartTime">PartTime</option>
@@ -204,7 +231,8 @@
                                             </div>
                                             <div class="col-md-6">
                                                 <label for="salary" class="form-label">Salary Amount</label>
-                                                <input type="text" placeholder="Enter Salary Amount" class="form-control" id="salary" name="salary" required>
+                                                <input type="text" placeholder="Enter Salary Amount"
+                                                    class="form-control" id="salary" name="salary" required>
                                             </div>
                                         </div>
                                     </div>
@@ -231,22 +259,26 @@
                                             </div>
                                             <div class="col-md-6">
                                                 <label for="city" class="form-label">City</label>
-                                                <input type="text" placeholder="Enter City" class="form-control" id="city" name="city" >
+                                                <input type="text" placeholder="Enter City" class="form-control"
+                                                    id="city" name="city">
                                             </div>
                                             <!-- state -->
                                             <div class="col-md-6">
                                                 <label for="state" class="form-label">State</label>
-                                                <input type="text" placeholder="Enter State" class="form-control" id="state" name="state">
+                                                <input type="text" placeholder="Enter State" class="form-control"
+                                                    id="state" name="state">
                                             </div>
                                             <!-- country -->
                                             <div class="col-md-6">
                                                 <label for="country" class="form-label">Country</label>
-                                                <input type="text" placeholder="Enter Country" class="form-control" id="country" name="country">
+                                                <input type="text" placeholder="Enter Country" class="form-control"
+                                                    id="country" name="country">
                                             </div>
                                             <!-- pincode -->
                                             <div class="col-md-6">
                                                 <label for="pincode" class="form-label">Pincode</label>
-                                                <input type="text" placeholder="Enter Pincode" class="form-control" id="pincode" name="pincode">
+                                                <input type="text" placeholder="Enter Pincode" class="form-control"
+                                                    id="pincode" name="pincode">
                                             </div>
                                         </div>
                                     </div>
@@ -268,25 +300,28 @@
                                         <div class="row">
                                             <div class="col-md-6">
                                                 <label for="payroll_type" class="form-label">Route</label>
-                                                <select  class="form-select" id="transport_id" name="transport_id" required>
+                                                <select class="form-select" id="transport_id" name="transport_id"
+                                                    required>
                                                     <option selected disabled>Choose...</option>
-                                                    
+
                                                 </select>
                                             </div>
                                             <div class="col-md-6">
                                                 <label for="salary" class="form-label">Vehicle</label>
-                                                <input type="text" class="form-control" id="vehicle_number" name="vehicle_number" readonly>
+                                                <input type="text" class="form-control" id="vehicle_number"
+                                                    name="vehicle_number" readonly>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        
-                    <div class="col-12 form__btn">
-                        <button type="submit" class="btn btn-danger rounded-pill w-50 mx-1" onclick="closeForm(event,'studentForm')">Cancel</button>
-                        <button type="submit" class="btn btn-success rounded-pill w-50 mx-1">Save</button>
-                    </div>
+
+                        <div class="col-12 form__btn">
+                            <button type="submit" class="btn btn-danger rounded-pill w-50 mx-1"
+                                onclick="closeForm(event,'studentForm')">Cancel</button>
+                            <button type="submit" class="btn btn-success rounded-pill w-50 mx-1">Save</button>
+                        </div>
                 </form>
             </div>
         </div>
