--- a/app/templates/students.html
+++ b/app/templates/students.html
@@ -9,17 +9,29 @@
 
 
 <div class="row" id="heading-row">
-    <div class="col-sm-12 col-md-5 col-xl-7.5" style="padding: 1rem">
-        <h2>Student Management</h2>
-        <p>Manage your Student here.</p>
+    <div class="col-sm-12 col-md-8 col-xl-7.5" style="padding: 1rem">
+        <h5>Students</h5>
+        <quote>Students are the architects of their own tomorrows, shaping futures with every lesson learned.</quote>
     </div>
-    <div class="col-sm-12 col-md-7 col-xl-4.5" style="padding: 1rem">
+    <div class="col-sm-12 col-md-4 col-xl-4.5" style="padding: 1rem">
         <div class="row">
             <div class="col text-end">
-                <a href="#" class="btn btn-success rounded-pill btn-block studentAddForm" onclick="openForm(event,'studentForm')">
-                    <i class="bi bi-plus-circle me-2"></i>Create Student</a>
-                <a href="#" class="btn btn-secondary rounded-pill btn-block"><i class="bi bi-download me-2"></i>Export </a>
-                <a href="#" class="btn btn-info rounded-pill btn-block"><i class="bi bi-upload me-2"></i>Import</a>
+                <a href="/app/register_student" class="btn btn-success btn-label rounded-pill right">
+                        <i class="bi bi-plus-circle label-icon align-middle fs-lg ms-2"></i>Enroll Student</a>
+                
+                <button class="btn btn-outline-primary rounded-pill btn-icon tripledots-dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="bi bi-three-dots-vertical"></i>
+                </button>
+                <div class="input-group">
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#"><i class="bi bi-upload me-2"></i> Import Bulk</a></li>
+                        <li><a class="dropdown-item" href="#"><i class="bi bi-download me-2"></i> Export CSV</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="#"><i class="bi bi-download me-2"> </i>Separated link</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
@@ -66,252 +78,6 @@
        
     </section>
 <!-- student table end -->
-<!-- student Form Start -->
-<section class="form_section bg-grey" id="studentForm">
-    <article class="container-fluid">
-        <div class="row">
-            <div class="col-xl-8"></div>
-            <div class="col-xl-4 form_div">
-                <div class="row">
-                    <div class="col-xl-6">
-                        <h3>Student Form</h3>
-                    </div>
-                    <div class="col-xl-6 text-end">
-                        <a href="#" class="btn-close studentCloseForm"></a>
-                    </div>
-                </div>
-                <form class="container studentForm" id="student-form" method="post" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    <input type="hidden" name="id" id="id">
-                    <div class="row form__area">
-                        <div class="col-md-12">
-                            <label for="student_name" class="form-label">Name</label>
-                            <input type="text" class="form-control" id="student_name" name="student_name" required>
-                        </div>
-                        <div class="col-md-6">
-                            <label for="date_of_birth" class="form-label">Date of Birth</label>
-                            <input type="date" class="form-control" id="date_of_birth" name="date_of_birth" required>
-                        </div>
-                        <div class="col-md-6">
-                            <label for="admission_date" class="form-label">Registration Date</label>
-                            <input type="date" class="form-control" id="admission_date" name="admission_date" required>
-                        </div>
-                        <div class="col-md-6">
-                            <label for="blood_group" class="form-label">Blood Group</label>
-                            <select id="blood_group" class="form-select" name="blood_group">
-                                <option selected>Choose...</option>
-                                <option value="A+">A+</option>
-                                <option value="A-">A-</option>
-                                <option value="B+">B+</option>
-                                <option value="B-">B-</option>
-                                <option value="AB+">AB+</option>
-                                <option value="O+">O+</option>
-                                <option value="O-">O-</option>
-                            </select>
-                        </div>
-                        <div class="col-md-6">
-                            <label for="gender" class="form-label">Gender</label>
-                            <select id="gender" class="form-select" name="gender">
-                                <option selected disabled>Choose...</option>
-                                <option value="Male">Male</option>
-                                <option value="FeMale">FeMale</option>
-                                <option value="Other">Other</option>
-                            </select>
-                        </div>
-                        <div class="col-md-12">
-                            <label for="photo" class="form-label">Photo</label>
-                            <input type="file" accept=".pdf,.jpg,.jpeg" placeholder="Seletct File" class="form-control" id="photo" name="photo">
-                        </div>
-                        <div class="accordion" id="accordionPanelsStayOpenExample">
-                            <div class="accordion-item">
-                                <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
-                                        aria-controls="panelsStayOpen-collapseOne">
-                                        Contact Details
-                                    </button>
-                                </h2>
-                                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse"
-                                    aria-labelledby="panelsStayOpen-headingOne">
-                                    <div class="accordion-body">
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <label for="email" class="form-label">Email</label>
-                                                <input type="text" class="form-control" id="email" name="email" required>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <label for="phone_number" class="form-label">Phone</label>
-                                                <input type="text" class="form-control" id="phone_number" name="phone_number" minlength="10" maxlength="10" required>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="accordion" id="accordionPanelsStayOpenExample">
-                            <div class="accordion-item">
-                                <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="true"
-                                        aria-controls="panelsStayOpen-collapseTwo">
-                                        Parent Details
-                                    </button>
-                                </h2>
-                                <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
-                                    aria-labelledby="panelsStayOpen-headingOne">
-                                    <div class="accordion-body">
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <label for="parent_name" class="form-label">Parent Name</label>
-                                                <input type="text" class="form-control" id="parent_name" name="parent_name" required>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <label for="relation_with_student" class="form-label">relation with student</label>
-                                                <select id="relation_with_student" class="form-select" name="relation_with_student" required>
-                                                    <option selected disabled>Choose...</option>
-                                                    <option value="Father">Father</option>
-                                                    <option value="Mother">Mother</option>
-                                                    <option value="Guardian">Guardian</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <label for="parent_phone" class="form-label">Parent phone</label>
-                                                <input type="text" class="form-control" id="parent_phone" name="parent_phone" required>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <label for="parent_email" class="form-label">Parent Email</label>
-                                                <input type="text" class="form-control" id="parent_email" name="parent_email" required>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="accordion" id="accordionPanelsStayOpenExample">
-                            <div class="accordion-item">
-                                <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="true"
-                                        aria-controls="panelsStayOpen-collapseThree">
-                                        Address Details
-                                    </button>
-                                </h2>
-                                <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
-                                    aria-labelledby="panelsStayOpen-headingTwo">
-                                    <div class="accordion-body">
-                                        <div class="row">
-                                            <div class="col-md-12">
-                                                <label for="Address" class="form-label">Address Line</label>
-                                                <textarea class="form-control" id="address"
-                                                    rows="3" name="address" required></textarea>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <label for="city" class="form-label">City</label>
-                                                <input type="text" class="form-control" id="city" name="city" >
-                                            </div>
-                                            <!-- state -->
-                                            <div class="col-md-6">
-                                                <label for="state" class="form-label">State</label>
-                                                <input type="text" class="form-control" id="state" name="state" >
-                                            </div>
-                                            <!-- country -->
-                                            <div class="col-md-6">
-                                                <label for="country" class="form-label">Country</label>
-                                                <input type="text" class="form-control" id="country" name="country" >
-                                            </div>
-                                            <!-- pincode -->
-                                            <div class="col-md-6">
-                                                <label for="pincode" class="form-label">Pincode</label>
-                                                <input type="text" class="form-control" id="pincode" name="pincode" >
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="accordion" id="accordionPanelsStayOpenExample">
-                            <div class="accordion-item">
-                                <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-                                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="true"
-                                        aria-controls="panelsStayOpen-collapseFour">
-                                        Class & Section
-                                    </button>
-                                </h2>
-                                <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse"
-                                    aria-labelledby="panelsStayOpen-headingThree">
-                                    <div class="accordion-body">
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <label for="class_id" class="form-label">Class</label>
-                                                <select id="class_id" class="form-select" name="class_id" required>
-                                                    
-                                                </select>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <label for="section_id" class="form-label">Section</label>
-                                                <select id="section_id" class="form-select" name="section_id" required>
-                                                    <option>Select class first</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>                                
-                            </div>
-                        </div>
-
-                         <div class="accordion" id="accordionPanelsStayOpenExample">
-                            <div class="accordion-item">
-                                <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="true"
-                                        aria-controls="panelsStayOpen-collapseFive">
-                                        Transportation
-                                    </button>
-                                </h2>
-                                <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse"
-                                    aria-labelledby="panelsStayOpen-headingOne">
-                                    <div class="accordion-body">
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <label for="payroll_type" class="form-label">Route</label>
-                                                <select  class="form-select" id="transport_id" name="transport_id" required>
-                                                    <option selected disabled>Choose...</option>
-                                                    
-                                                </select>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <label for="salary" class="form-label">Vehicle</label>
-                                                <input type="text" class="form-control" id="vehicle_number" name="vehicle_number" readonly>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        
-                    </div>
-
-                    
-                    <div class="col-12 form__btn">
-                        <button type="submit" class="btn btn-danger rounded-pill w-50 mx-1" onclick="closeForm(event,'studentForm')">Cancel</button>
-                        <button type="submit" class="btn btn-success rounded-pill w-50 mx-1">Save</button>
-                        
-                    </div>
-                </form>
-            </div>
-        </div>
-    </article>
-   
-</section>
-
-
-<!-- create bootstrap accordian form  -->
-
 
 
 {% endblock %}
